# robotik-ws1718-grp01

./: .gitignore  .gitignore.save  CMakeLists.txt  README.md  helperFunctions.h  protocol.h  protocol.h.orig
Test/: test.md
doc/: .~lock.Robotik_Abgabe_JulianW.odt#  Doc_Aufteilung  Doku_Abstandserkennung-Lea.txt  Doku_Robotics_WS17_Gr02_AADC.tex  Linienerkennung.odt  Robotik_Abgabe.odt  Robotik_Abgabe_JulianW.odt  Tagebuch_Gruppe1.md  Zielsetzung.md  Zielsezung.odt  adrian.md  lea.md
doc/Doku/: Doku_Robotics_WS17_Gr01_AADC.tex  Doku_Robotics_WS17_Gr02_AADC.tex
doc/DokuVarianten/: Robotik Dokumentation  Robotik Dokumentation.odt  Robotik_Abgabe.odt
doc/TeilDokus/: Linienerkennung Update JulianF.odt  Robotik_Abgabe_JulianW.odt  robotik_abgabe_aso.odt
src/: CMakeLists.txt  CMakeLists.txt.orig  CMakeLists_BACKUP_4412.txt  CMakeLists_BACKUP_4664.txt  CMakeLists_BASE_4664.txt  CMakeLists_LOCAL_4664.txt  CMakeLists_REMOTE_4664.txt  CMakeLists_default.txt
src/AccelerationFilter/: c_accelerationFilter.cpp  c_accelerationFilter.h
src/BlueImgFilter/: CMakeLists.txt  blueImgFilter.cpp  blueImgFilter.cpp.orig  blueImgFilter.h
src/DisplayGraph/: displayGraph.cpp  displayGraph.h
src/FileToVideo/: CMakeLists.txt  cFileToVideo.cpp  cFileToVideo.h
src/Helper/: helper.cpp  helper.h  medianfilter.h  protocol.h
src/KalmanFilter/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h  stdafx.h
src/Kalman_1D/: CMakeLists.txt  Test.cpp  Test.h  testFilter.cpp  testFilter.h  testFilter_data.h
src/MedianFilter/: CMakeLists.txt  CMakeLists.txt.orig  medianFilter.cpp  medianFilter.h
src/NegativNumberFilter/: negativNumberFilter.cpp  negativNumberFilter.h
src/OneLineDetect/: CMakeLists.txt  oneLineDetect.cpp  oneLineDetect.h
src/TestBildFilter/: CMakeLists.txt  cTestBildFilter.cpp  cTestBildFilter.h
src/UltrasonicLogic/: CMakeLists.txt  ultrasonicLogic.cpp  ultrasonicLogic.cpp.orig  ultrasonicLogic.h
src/UltrasonicMerge/: ultrasonicMerge.cpp  ultrasonicMerge.h
src/UltrasonicSplit/: ultrasonicSplit.cpp  ultrasonicSplit.h
src/VideoToFile/: CMakeLists.txt  cVideoToFile.cpp  cVideoToFile.h
src/controller/: CMakeLists.txt  c_controller.cpp  c_controller.h
src/motorcontrol/: CMakeLists.txt  c_motorcontrol.cpp  c_motorcontrol.cpp.orig  c_motorcontrol.h  stdafx.h  template_data.h
(+10 files in other folders)
